--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,7 +1,5 @@
 {
-  "plugins": [
-    "stylelint-scss"
-  ],
+  "extends": "stylelint-config-standard-scss",
   "rules": {
     "at-rule-no-unknown": null,
     "scss/at-rule-no-unknown": true,
