--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "sass": "^1.43.5",
     "slugify": "^1.6.3",
     "stylelint": "^14.1.0",
-    "stylelint-scss": "^4.0.0"
+    "stylelint-config-standard-scss": "^3.0.0"
   },
   "browserslist": [
     "defaults and supports es6-module and not IE <= 11"
