--- a/package.json
+++ b/package.json
@@ -21,22 +21,22 @@
     "lint:js:fix": "eslint --cache --fix \"**/*.js\""
   },
   "devDependencies": {
-    "@11ty/eleventy": "^1.0.0-beta.8",
+    "@11ty/eleventy": "^1.0.0",
     "@11ty/eleventy-img": "^1.0.0",
     "@11ty/eleventy-upgrade-help": "^1.0.1",
     "cross-env": "^7.0.3",
     "dayjs": "^1.10.7",
-    "eslint": "^8.3.0",
+    "eslint": "^8.6.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^4.3.0",
     "lint-staged": "^10.4.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.5.0",
+    "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
-    "sass": "^1.43.5",
-    "slugify": "^1.6.3",
-    "stylelint": "^14.1.0",
+    "sass": "^1.47.0",
+    "slugify": "^1.6.5",
+    "stylelint": "^14.2.0",
     "stylelint-config-standard-scss": "^3.0.0"
   },
   "husky": {
