--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -2,20 +2,23 @@
   "extends": ["stylelint-config-standard-scss"],
   "rules": {
     "at-rule-no-unknown": null,
-    "at-rule-empty-line-before": ["always", { "except": ["after-same-name", "inside-block", "blockless-after-same-name-blockless"], "ignoreAtRules": ["function", "mixin"] }],
+    "at-rule-empty-line-before": null,
     "block-closing-brace-newline-after": ["always", { "ignoreAtRules": ["if", "else"] }],
     "block-opening-brace-space-before": "always",
     "block-opening-brace-newline-after": "always",
     "block-closing-brace-newline-before": "always",
     "block-closing-brace-empty-line-before": "never",
+    "custom-property-pattern": null,
     "declaration-block-trailing-semicolon": "always",
-    "declaration-empty-line-before": "never",
+    "declaration-empty-line-before": null,
     "declaration-block-semicolon-newline-after": "always-multi-line",
     "font-family-name-quotes": "always-where-required",
     "indentation": 2,
-    "max-line-length": [120, { "ignore": "comments" }],
+    "max-line-length": null,
     "scss/at-if-closing-brace-newline-after": "always-last-in-chain",
     "scss/at-if-closing-brace-space-after": "always-intermediate",
+    "scss/double-slash-comment-empty-line-before": null,
+    "scss/dollar-variable-empty-line-before": null,
     "scss/at-rule-no-unknown": true
   }
 }
